Fixed color contrast

--- a/Crypo_Chart_Pern/client/src/index.css
+++ b/Crypo_Chart_Pern/client/src/index.css
@@ -210,7 +210,7 @@ body {
 /* Doughnut Card */
 
 .progressbar-outer {
-  background-color: grey;
+  background-color: #cccccc;
   border-radius: 20px;
   height: 9px;
   width: 350px;
